Implements ClaimsMap for centralised claims processing